--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -4,21 +4,31 @@
     box-shadow: 0px 4px 6px -2px rgba(0, 0, 0, 0.05), 0px 10px 15px -3px rgba(0, 0, 0, 0.10);
     width: 3em;
     height: 3em;
-    position: absolute;
-    left: 40%;
-    top:-1em;
+    position: relative;
+    top:-35px;
 }
 
 .card-container{
-    margin: 1.5em;
     border-radius: 8px;
     background-color: #F9FAFB;
     box-shadow: 0px 4px 25px 0px rgba(0, 0, 0, 0.10);
     width: fit-content;
     padding: 1em;
     position: relative;
+    text-align: center;
+    max-width: 500px;
+    margin: 30px auto;
+    font-family: Inter, sans-serif;
+    color: #6B7280;
+    line-height: 24px;
 }
 
 .card-children{
-    margin-top: 1.5em;
+    margin-top: -30px;
+}
+
+.card-title-container{
+    font-weight: bold;
+    margin:.5em;
+    color: #111827;
 }
