--- a/src/components/Testimonials/Testimonials.css
+++ b/src/components/Testimonials/Testimonials.css
@@ -1,3 +1,30 @@
 .testimonials-main-container{
-    background-color: red;
+    background-color: #2545B8;
+    /* position: absolute; */
+    max-width: 360px;
+    color:white;
+    margin: auto;
+}
+
+.testimonials-main-container span{
+    font-size: 3rem;
+}
+
+.testimonials-main-container img{
+    width: 100%;
+    max-width: 330px;
+    max-height: 200px;
+    object-fit: cover;
+    border-radius: 10px;
+    display: block;
+    margin: auto;
+}
+
+.testimonials-main-container p{
+    margin: 0;
+    /* padding: 0; */
+}
+
+.testimonial-content {
+    margin: 10px 20px;
 }
