--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,9 @@
 body, html {
   margin: 0;
   padding: 0;
-  background-color: #ddd;
+  /* background-color: #ddd; */
 }
 
-/* #root{
-  width: 100vw;
-  height: 100vh;
-} */
 
 .app-container{
   max-width: 800px;
